package com.dacarex.capital.enums;

public enum TipoCuenta {

}
